# CMake_example

./: CMakeLists.txt
toinstall/: CMakeLists.txt
toinstall/dos1/: CMakeLists.txt  oui1.cc  oui1.h  vide.cc
toinstall/dos2/: CMakeLists.txt  oui2.h
